test/compile-fail/resolution/multiple-definition-mod-fn-struct/expected.txt
error: the name `b` is defined multiple times
 --> top.rhdl:1:4
  |
1 | mod b {}
  |     ^ previous definition of the type `b` here
3 | struct b {}
  |        - `b` redefined here
